--- a/.github/workflows/reusable-deploy.yml
+++ b/.github/workflows/reusable-deploy.yml
@@ -7,8 +7,14 @@ on:
         required: true
       PUSH_METHOD:
         required: true
+      PUSHPLUS_TOKEN:
+        required: false
       WXPUSHER_SPT:
-        required: true
+        required: false
+      TELEGRAM_BOT_TOKEN:
+        required: false
+      TELEGRAM_CHAT_ID:
+        required: false
 
 jobs:
   deploy:
